--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "nodemon": "^1.19.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
